NOTI-21 test 환경에서 jwt property 추가

--- a/src/test/resources/application-test.yaml
+++ b/src/test/resources/application-test.yaml
@@ -15,7 +15,8 @@ spring:
       ddl-auto: create-drop
     show-sql: true
 
-
+jwt:
+  secret: secretKey-test-jwt-for-noti-project-update
 externalUrl: https://github.com/Noti-iOS/noti-backend/wiki
 #logging:
 #  level:
