--- a/src/test/resources/application-test.yaml
+++ b/src/test/resources/application-test.yaml
@@ -11,9 +11,12 @@ spring:
   jpa:
     database-platform: org.hibernate.dialect.MySQL8Dialect
     hibernate:
-      format_sql: true
       ddl-auto: create-drop
-    show-sql: true
+    properties:
+      hibernate:
+        format_sql: true
+        show_sql: true
+        use_sql_comments: true
 
 jwt:
   secret: secretKey-test-jwt-for-noti-project-update
