NOTI-36  임시로 submodule 사용 중지을 위한 설정
gradle 복사기능 주석 처리

--- a/build.gradle
+++ b/build.gradle
@@ -71,15 +71,15 @@ tasks.named('test') {
 	useJUnitPlatform()
 }
 
-processResources.dependsOn('copyPrivate')
-
-task copyPrivate(type: Copy) {
-	copy {
-		from './noti-config'
-		include "*.yaml"
-		into 'src/main/resources'
-	}
-}
+//processResources.dependsOn('copyPrivate')
+//
+//task copyPrivate(type: Copy) {
+//	copy {
+//		from './noti-config'
+//		include "*.yaml"
+//		into 'src/main/resources'
+//	}
+//}
 
 jar {
 	enabled = false
