--- a/src/test/resources/application-test.yaml
+++ b/src/test/resources/application-test.yaml
@@ -16,7 +16,7 @@ spring:
       hibernate:
         format_sql: true
         show_sql: true
-        use_sql_comments: true
+#        use_sql_comments: true
 
 jwt:
   secret: secretKey-test-jwt-for-noti-project-update
