--- a/src/main/resources/application-local.yaml
+++ b/src/main/resources/application-local.yaml
@@ -3,7 +3,7 @@ spring:
     database-platform: org.hibernate.dialect.MySQL8Dialect
     hibernate:
       format_sql: true
-      ddl-auto: create-drop
+      ddl-auto: create
     show-sql: true
 
     logging:
@@ -15,3 +15,4 @@ spring:
               descriptor:
                 sql:
                   BasicBinder: TRACE
+    open-in-view: false
