NOTI-52 [FIX] endPoint가 reader 전용에서 기본으로 변경

--- a/src/main/resources/application-dev.yaml
+++ b/src/main/resources/application-dev.yaml
@@ -1,6 +1,6 @@
 spring:
   redis:
-    host: noti-ro.qh6ksj.ng.0001.apn2.cache.amazonaws.com
+    host: noti.qh6ksj.ng.0001.apn2.cache.amazonaws.com
     port: 6379
   datasource:
     url: jdbc:mysql://noti.cpwm4hbvoflk.ap-northeast-2.rds.amazonaws.com:3306/noti
