NOTI-56 [CHORE] 로컬환경에서 Hikari Connectio 정보를 확인하고, test에서 sql parameter를 확인하기위한 properties 수정

--- a/src/test/resources/application-test.yaml
+++ b/src/test/resources/application-test.yaml
@@ -1,4 +1,5 @@
 spring:
+  security.
   test:
     database:
       replace: none
@@ -20,3 +21,11 @@ spring:
 jwt:
   secret: secretKey-test-jwt-for-noti-project-update
 externalUrl: https://github.com/Noti-iOS/noti-backend/wiki
+
+logging:
+  level:
+    org:
+      hibernate:
+        type:
+          descriptor:
+           sql: trace
