NOTI-56 [CHORE] 로컬환경에서 Hikari Connectio 정보를 확인하고, test에서 sql parameter를 확인하기위한 properties 수정

--- a/src/main/resources/application-local.yaml
+++ b/src/main/resources/application-local.yaml
@@ -19,3 +19,8 @@ spring:
                 sql:
                   BasicBinder: TRACE
     open-in-view: false
+
+logging:
+  level:
+    com.zaxxer.hikari: TRACE
+    com.zaxxer.hikari.HikariConfig: DEBUG
