NOTI-58 [CHORE] Fixture-Monkey 추가

--- a/build.gradle
+++ b/build.gradle
@@ -70,6 +70,9 @@ dependencies {
 	testImplementation 'org.testcontainers:testcontainers:1.17.5'
 	testImplementation 'org.testcontainers:junit-jupiter:1.17.5'
 	testImplementation 'org.testcontainers:mysql:1.17.5'
+
+	// 테스트 객체 생성을 위한 Fixture-monkey 추가
+ 	testImplementation 'com.navercorp.fixturemonkey:fixture-monkey-starter:0.4.12'
 }
 
 tasks.named('test') {
