NOTI-59 [TEST] batch insert를 위한 설정 추가
rewriteBatchedStatements 옵션이 있어야 mysql에서 쿼리를 합쳐서 진행합니다.

--- a/src/test/resources/application-test.yaml
+++ b/src/test/resources/application-test.yaml
@@ -7,6 +7,9 @@ spring:
     url: jdbc:tc:mysql:8:///noti
     username: noti
     password: noti
+    hikari:
+      data-source-properties:
+        rewriteBatchedStatements: true
 
   jpa:
     database-platform: org.hibernate.dialect.MySQL8Dialect
@@ -14,8 +17,11 @@ spring:
       ddl-auto: create-drop
     properties:
       hibernate:
+        order_updates: true
+        order_inserts: true
         format_sql: true
         show_sql: true
+
 
 jwt:
   secret: secretKey-test-jwt-for-noti-project-update
