--- a/build.gradle
+++ b/build.gradle
@@ -88,7 +88,7 @@ processResources.dependsOn('copyPrivate')
 task copyPrivate(type: Copy) {
 	copy {
 		from './noti-config'
-		include "*.yaml"
+		include "*.yaml", "*.json"
 		into 'src/main/resources'
 	}
 }
