--- a/build.gradle
+++ b/build.gradle
@@ -62,6 +62,9 @@ dependencies {
 	// m1 spring cloud gateway
 	implementation 'io.netty:netty-resolver-dns-native-macos:4.1.82.Final:osx-aarch_64'
 
+	implementation 'org.flywaydb:flyway-core'
+	implementation 'org.flywaydb:flyway-mysql'
+
 	compileOnly 'org.projectlombok:lombok'
 	runtimeOnly 'mysql:mysql-connector-java'
 	annotationProcessor 'org.projectlombok:lombok'
@@ -90,6 +93,12 @@ task copyPrivate(type: Copy) {
 		from './noti-config'
 		include "*.yaml", "*.json"
 		into 'src/main/resources'
+	}
+
+	copy {
+		from './noti-config/flyway'
+		include '*.sql'
+		into 'src/main/resources/db/migration'
 	}
 }
 
