NOTI-85 [CHORE] flyway를 test properties에 적용
jpa ddl auto 옵션을 사용해서 자동으로 테이블을 생성하면 entity에 작성한 멤버 순서대로 컬럼이 들어가는게 아니고 a-z순으로 들어가게 됩니다. 그래서 새로 추가한 is_deleted는 마지막에 위치하는데 테스트 코드에서 새로운 테이블은 만들면 중간에 들어가게되어 오류가 생겨 수정했습니다.

--- a/src/test/resources/application-test.yaml
+++ b/src/test/resources/application-test.yaml
@@ -11,17 +11,18 @@ spring:
       data-source-properties:
         rewriteBatchedStatements: true
 
+  flyway:
+    enabled: true
   jpa:
     database-platform: org.hibernate.dialect.MySQL8Dialect
     hibernate:
-      ddl-auto: create-drop
+      ddl-auto: validate
     properties:
       hibernate:
         order_updates: true
         order_inserts: true
         format_sql: true
         show_sql: true
-
 
 jwt:
   secret: secretKey-test-jwt-for-noti-project-update
